update navbar for rwd

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
                 <a data-scroll="contact" href="#">Contact</a>
             </li>
         </ul>
+        <ul class = 'header__list__ham'>
+            <li class = 'header__list__ham-item'>
+                <a data-scroll="about" href="#">About me</a>
+            </li>
+            <li class = 'header__list__ham-item'>
+                <a data-scroll="projects" href="#">Projects</a>
+            </li>
+            <li class = 'header__list__ham-item'>
+                <a data-scroll="contact" href="#">Contact</a>
+            </li>
+        </ul>
     </header>
     <section class='introduction'>
         <div class="introduction__title">
