add new learned technologies

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h1 class = 'about__title'>About me</h1>
         <div class="about__info">
             <div class="about__info-about">
-                <p>Hi, my name is Jakub Otręba. I have an engineering degree in computer science. My adventure with programming I started by learning C++ and C#. After that I tried my strength in web development, and decided that this is what I want to do. I have been programming in JavaScript for about two years. I'm fluent with frameworks like Phaser, JQuery and React. In the future I want to learn Node.js.</p>
+                <p>Hi, my name is Jakub Otręba. I have an engineering degree in computer science. My adventure with programming I started by learning C++ and C#. After that I tried my strength in web development, and decided that this is what I want to do. I have been programming in JavaScript for about three years. I'm fluent with frameworks like Phaser, JQuery and React. In the future I want to learn Node.js.</p>
                 <p>In my free time I like to play video games and doing sports.</p>
             </div>
             <div class="about__info-technologies">
@@ -66,6 +66,8 @@
                 <i class="fab fa-react"></i>
                 <i class="fab fa-sass"></i>
                 <i class="fab fa-git-alt"></i>
+                <i class="fab fa-npm"></i>
+                <i class="fab fa-bootstrap"></i>
             </div>
         </div>
     </section>
